force-app/main/default/objects/Co_Scholastic__c/Co_Scholastic__c.object-meta.xml
<CustomObject>
    <label>Co Scholastic</label>
    <nameField>
        <label>Co Scholastic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co Scholastics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>