force-app/main/default/objects/Co_Scholastic__c/fields/Absent__c.field-meta.xml
<CustomField>
    <fullName>Absent__c</fullName>
    <label>Absent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>