force-app/main/default/objects/Co_Scholastic__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grades_5</valueSetName>
    </valueSet>
</CustomField>