force-app/main/default/objects/Co_Scholastic__c/fields/Health_PE__c.field-meta.xml
<CustomField>
    <fullName>Health_PE__c</fullName>
    <label>Health &amp; PE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>