force-app/main/default/objects/Co_Scholastic__c/fields/Late__c.field-meta.xml
<CustomField>
    <fullName>Late__c</fullName>
    <label>Late</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>