force-app/main/default/objects/Co_Scholastic__c/fields/Leave__c.field-meta.xml
<CustomField>
    <fullName>Leave__c</fullName>
    <label>Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>