force-app/main/default/objects/Co_Scholastic__c/fields/Present__c.field-meta.xml
<CustomField>
    <fullName>Present__c</fullName>
    <label>Present</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>