force-app/main/default/objects/Co_Scholastic__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Students</valueSetName>
    </valueSet>
</CustomField>