force-app/main/default/objects/Co_Scholastic__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <label>UniqueId</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>