force-app/main/default/objects/Co_Scholastic__c/fields/Value_Education__c.field-meta.xml
<CustomField>
    <fullName>Value_Education__c</fullName>
    <label>Value Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>