force-app/main/default/objects/Co_Scholastic__c/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>