force-app/main/default/objects/Co_Scholastic__c/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>Student__c</columns>
    <columns>Work_Education__c</columns>
    <columns>Art_Education__c</columns>
    <columns>Health_PE__c</columns>
    <columns>Discipline1__c</columns>
    <columns>GK__c</columns>
    <columns>Value_Education__c</columns>
    <columns>Scout_Guide__c</columns>
    <columns>Working_Days__c</columns>
    <columns>Present__c</columns>
    <columns>Absent__c</columns>
    <columns>Late__c</columns>
    <columns>Leave__c</columns>
    <columns>Height__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Mine</filterScope>
    <label>MyView</label>
</ListView>